--- a/App/contact-app/src/app/authentication/login/login.component.html
+++ b/App/contact-app/src/app/authentication/login/login.component.html
@@ -6,13 +6,13 @@
         The username and password were not recognised
       </mat-error>
       <mat-form-field class="full-width-input">
-        <input matInput placeholder="Email" formControlName="username" required>
+        <input type="email" autocomplete="new-password" matInput placeholder="Email" formControlName="username" required>
         <mat-error>
           Please provide a valid email address
         </mat-error>
       </mat-form-field>
       <mat-form-field class="full-width-input">
-        <input matInput type="password" placeholder="Password" formControlName="password" required>
+        <input matInput type="password" autocomplete="new-password" placeholder="Password" formControlName="password" required>
         <mat-error>
           Please provide a valid password
         </mat-error>
