--- a/App/contact-app/src/app/component/navigation/navigation.component.html
+++ b/App/contact-app/src/app/component/navigation/navigation.component.html
@@ -12,7 +12,7 @@
       <mat-nav-list>
         <a mat-list-item [routerLink] = "'/'">Dashboard</a>
         <a mat-list-item [routerLink] = "'/addaddress'" >Add Address</a>
-        <a mat-list-item [routerLink] = "'/listperson'" >List Person</a>
+        <a mat-list-item [routerLink] = "'/person'" >Person</a>
         <a mat-list-item [routerLink] = "'/presontree'" >Person Tree</a>
         <a mat-list-item [routerLink] = "'/presondrop'" >Person Drop</a>
         <a mat-list-item [routerLink] = "'/admin'" *ngIf="isAdmin">Admin</a>
