--- a/App/contact-app/src/app/pages/person/list-person/list-person.component.html
+++ b/App/contact-app/src/app/pages/person/list-person/list-person.component.html
@@ -20,6 +20,7 @@
       [length]="dataSource?.data.length"
       [pageIndex]="0"
       [pageSize]="5"
-      [pageSizeOptions]="[5,10]">
+      [pageSizeOptions]="[5,10]"
+      showFirstLastButtons>
   </mat-paginator>
 </div>
