--- a/App/contact-app/src/app/pages/person/list-person/list-person.component.scss
+++ b/App/contact-app/src/app/pages/person/list-person/list-person.component.scss
@@ -1,3 +1,13 @@
 .full-width-table {
   width: 100%;
 }
+
+.action-wrapper{
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+
+  .mat-raised-button{
+    margin-right: 20px;
+  }
+}
