--- a/App/contact-app/src/app/pages/person/add-edit-person/add-edit-person.component.html
+++ b/App/contact-app/src/app/pages/person/add-edit-person/add-edit-person.component.html
@@ -1,3 +1,38 @@
-<p>
-  add-edit-person works!
-</p>
+
+<div class="action-wrapper">
+  <button mat-raised-button color="accent" type="button" (click)="listPerson()">
+    Back
+  </button>
+</div>
+
+<form [formGroup]="personForm" novalidate (ngSubmit)="onSubmit()" #formDirective="ngForm" >
+  <mat-card class="shipping-card">
+    <mat-card-header>
+      <mat-card-title>{{title}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="row">
+        <div class="col">
+          <mat-form-field class="full-width">
+            <input matInput placeholder="First name" formControlName="firstName">
+            <mat-error *ngIf="personForm.controls['firstName'].hasError('required')">
+              First name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="col">
+          <mat-form-field class="full-width">
+            <input matInput placeholder="Last name" formControlName="lastName">
+            <mat-error *ngIf="personForm.controls['lastName'].hasError('required')">
+              Last name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit" [disabled]="isSaving">Submit</button>
+      <button mat-raised-button color="accent" type="reset">Reset</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
