--- a/App/contact-app/src/app/pages/person/add-edit-person/add-edit-person.component.html
+++ b/App/contact-app/src/app/pages/person/add-edit-person/add-edit-person.component.html
@@ -1,11 +1,10 @@
-
 <div class="action-wrapper">
   <button mat-raised-button color="accent" type="button" (click)="listPerson()">
     Back
   </button>
 </div>
 
-<form [formGroup]="personForm" novalidate (ngSubmit)="onSubmit()" #formDirective="ngForm" >
+<form [formGroup]="personForm" novalidate (ngSubmit)="onSubmit()" #formDirective="ngForm">
   <mat-card class="shipping-card">
     <mat-card-header>
       <mat-card-title>{{title}}</mat-card-title>
@@ -14,7 +13,7 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="First name" formControlName="firstName">
+            <input matInput placeholder="First name" formControlName="firstName" required>
             <mat-error *ngIf="personForm.controls['firstName'].hasError('required')">
               First name is <strong>required</strong>
             </mat-error>
@@ -22,13 +21,58 @@
         </div>
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Last name" formControlName="lastName">
+            <input matInput placeholder="Last name" formControlName="lastName" required>
             <mat-error *ngIf="personForm.controls['lastName'].hasError('required')">
               Last name is <strong>required</strong>
             </mat-error>
           </mat-form-field>
         </div>
       </div>
+      <div>
+        <button mat-raised-button color="primary" type="button" (click)="addPhone()">Add Phone</button>
+        <ng-container formArrayName="phones">
+          <div class="row" *ngFor="let phone of phones.controls; index as i">
+            <ng-container [formGroupName]="i">
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Phone Number" formControlName="number" required>
+                  <mat-error *ngIf="phone.controls['number'].hasError('required')">
+                    Phone Number is <strong>required</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+              <div class="col">
+                <mat-checkbox formControlName="isPrimary">
+                  IsPrimary
+                </mat-checkbox>
+                <mat-error *ngIf="phone.controls['isPrimary'].hasError('required')">
+                  IsPrimary is <strong>required</strong>
+                </mat-error>
+              </div>
+            </ng-container>
+          </div>
+        </ng-container>
+      </div>
+
+
+      <div>
+        <button mat-raised-button color="primary" type="button" (click)="addEmail()">Add Email</button>
+        <ng-container formArrayName="emails">
+          <div class="row" *ngFor="let emailItem of emails.controls; index as i">
+            <ng-container [formGroupName]="i">
+              <div class="col">
+                <mat-form-field class="full-width">
+                  <input matInput placeholder="Email" type="email" formControlName="email" required>
+                  <mat-error *ngIf="emailItem.controls['email'].hasError('required')">
+                    Email is <strong>required</strong>
+                  </mat-error>
+                </mat-form-field>
+              </div>
+            </ng-container>
+          </div>
+        </ng-container>
+      </div>
+
     </mat-card-content>
     <mat-card-actions>
       <button mat-raised-button color="primary" type="submit" [disabled]="isSaving">Submit</button>
